[package]
name = "crossvulkan"
version = "0.1.0"
authors = ["Sam Smith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vk-sys = "0.5.1"
vulkano={version= "0.18.0", optional = true}
vulkano-shaders="0.18.0"

[dependencies.smallvec]
version = "1.2"

[dependencies.glfw]
git="https://github.com/PistonDevelopers/glfw-rs.git"
default-features = true
features=["vulkan"]

[features]
vulkano-support= ["vulkano"]
